<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Monthly"
        android:id="@+id/textView"

       android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
